# OOP-SFMLSnake

./: CMakeLists.txt  Fruit.cpp  Fruit.h  Game.cpp  Game.h  GameOverScreen.cpp  GameOverScreen.h  GameScreen.cpp  GameScreen.h  MenuScreen.cpp  MenuScreen.h  OptionScreen.cpp  OptionScreen.h  README.md  Snake.cpp  Snake.h  SnakeNode.cpp  SnakeNode.h  World.cpp  World.h
